# blur

./: .gitignore  README.md  pyproject.toml
src/blur/: blur.py
src/blur/examples/: run_blur.py
src/blurpy/: blur.py
src/blurpy/examples/: run_blur.py
